# DerLg

./: GEMINI.md  README.md  test.html
.claude/agents/: DerLgClaude.agent.md
.github/agents/: DerLg.agent.md
.github/instructions/: derlg.instructions.md
.kiro/specs/agentic-llm-chatbot/: tasks.md
.opencode/: AGENTS.md
backend/: .env.example  jest.config.js  package-lock.json  package.json  prisma.config.ts
backend/prisma/: schema.prisma
backend/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
backend/src/ai-tools/: ai-tools.controller.ts  ai-tools.module.ts  ai-tools.service.ts
backend/src/audit-logs/: audit-logs.controller.ts  audit-logs.module.ts  audit-logs.service.ts
backend/src/bookings/: bookings.controller.ts  bookings.module.ts  bookings.service.ts
backend/src/common/: health.service.ts
backend/src/config/: env.validation.ts  instrument.ts  winston.config.ts
backend/src/currency/: currency.controller.ts  currency.service.ts
backend/src/emergency/: emergency.controller.ts  emergency.module.ts  emergency.service.ts
backend/src/explore/: explore.controller.ts  explore.module.ts  (+1 more)
docs/agentic_chatbots_llm/: 14-ai-tools-api.md  A-00-project-overview.md  A-01-conversation-state.md  A-02-system-prompt-design.md  A-04-agent-loop.md  A-08-edge-cases.md  A-09-local-model-migration.md  README.md
docs/architectures/: Agentic.llm.chatbot.md  backend.architecture.md  frontend.architecture.md  system.design.interact.architectures.md
docs/backend/: 00-project-overview.md  01-database-schema.md  02-authentication.md  03-transportation-booking.md  06-payment-system.md  07-emergency-safety.md  08-student-discount.md  09-loyalty-points.md
docs/features/: F00-feature-index.md  F01-ai-chat.md  F02-trip-discovery.md  F03-transportation.md  F04-hotel-booking.md  F05-tour-guide.md  F06-F09-batch.md  F10-F13-batch.md  F14-F16-batch.md
docs/frontend/: F-00-project-overview.md  F-01-home-screen.md  F-02-explore-screen.md  F-06-ai-chat-interface.md
docs/mcp_server/: mcp.json
frontend/: package-lock.json  package.json
frontend/hooks/: useAuth.ts  useGeolocation.ts  useLoyaltyPoints.ts  useOfflineQueue.ts  useWebSocket.ts
frontend/lib/: api.ts  formatters.ts  i18n.ts
frontend/messages/: en.json  kh.json  zh.json
frontend/public/: manifest.json  sw.js
frontend/stores/: authStore.ts  bookingStore.ts  chatStore.ts
llm_agentic_chatbot/: .coverage  .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  railway.json  requirements.txt
llm_agentic_chatbot/.hypothesis/constants/: 011a7421d0e30c27  0229b26cea29873b  05223bde9410d961  0acfda4faf91289c  0e13ecfc9947fb5b  1bc53a71a8150585  2472193982028cd0  31da32546a2e075d  33df879e1adf2136  34b2d481dcf77e38  36fbd5f2726a7a8a  3b26be4b5a43a35f  3c57390ec580c058  5775dfac0aa06735  5cb679991f5a0dee  60ae774c7997d56f  61650241fe440e49  6176dfecce09ad88  641d634a8a8caae9  699f6f8f4563e0b4  720ea1dfe66fcce9  770c7dcb915993d9  79f678ad923de4d3  7fd0290295aa6b21  86113e4ce2198766  894997e066157ae8  8d007426b9f55769  8f3d7c3520067fb6  90d28df110adaf07  9e0c4f6bcb38f571  a3100dbaf5fa7264  aaff2572cc70d12a  aef00f09dc5c90fc  b0abda3d82377e90  bfa1ac82ab14a364  c0e9600ed0248e16  c36fd54d4bc8fc03  c5affc88e238e36c  ce10594c3779591a  f0ab7abeb0cc7224  (+3 more)
llm_agentic_chatbot/agent/: __init__.py  checkpointer.py  core.py  graph.py
llm_agentic_chatbot/agent/formatters/: __init__.py  formatter.py  message_types.py
llm_agentic_chatbot/agent/models/: __init__.py  anthropic.py  client.py  ollama.py
llm_agentic_chatbot/agent/prompts/: __init__.py  builder.py  templates.py
llm_agentic_chatbot/agent/session/: __init__.py  manager.py  side_effects.py  state.py
llm_agentic_chatbot/agent/tools/: __init__.py  executor.py  schemas.py
llm_agentic_chatbot/agent/tools/handlers/: __init__.py  booking.py  info.py  payment.py  trips.py
llm_agentic_chatbot/api/: __init__.py  health.py  metrics.py  middleware.py  payment_listener.py  websocket.py
llm_agentic_chatbot/config/: __init__.py  settings.py
llm_agentic_chatbot/docs/: DEPLOYMENT.md
llm_agentic_chatbot/scripts/: check_production.py
llm_agentic_chatbot/tests/: .env.test  __init__.py  conftest.py  test_settings.py
llm_agentic_chatbot/tests/integration/: __init__.py  test_middleware_integration.py  test_redis_integration.py
llm_agentic_chatbot/tests/property/: __init__.py  test_state_serialization.py
llm_agentic_chatbot/tests/unit/: test_agent_core.py  test_cache.py  test_check_production.py  test_checkpointer.py  test_circuit_breaker.py  test_formatter.py  test_health.py  test_http_pool.py  test_logging.py  test_metrics.py  test_metrics_analytics.py  test_middleware.py  test_models.py  test_payment_listener.py  test_prompt_builder.py  test_rate_limiter.py  test_redis.py  test_sanitizer.py  test_session_manager.py  test_side_effects.py  test_state.py  test_tool_executor.py  test_tool_handlers.py  test_tool_schemas.py  test_websocket.py
llm_agentic_chatbot/utils/: cache.py  circuit_breaker.py  logging.py  rate_limiter.py  redis.py  sanitizer.py
(+95 files in other folders)
